# amod

./: .gitignore  CMakeLists.txt  README.md
results/: instances.csv
src/: main.c
src/generate/: generate.c  generate.h
src/run/: run.c  run.h
src/run/model/: model.c  model.h
src/utils/: agnostic_io.c  agnostic_io.h  csv.c  csv.h  entities.c  entities.h  strings.c  strings.h  utils.c  utils.h  vector.c  vector.h
tests/: CMakeLists.txt  runner.c
